--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "landmark-lens",
-  "version": "0.1.0",
+  "type": "module",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
